--- a/app/src/main/res/menu/top_bar_menu.xml
+++ b/app/src/main/res/menu/top_bar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_bar_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
+        android:icon="@drawable/ic_settings_white_24dp"
         android:title="@string/title_settings"
         app:showAsAction="always" />
 </menu>
