--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,10 +11,10 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
-    <item
-        android:id="@+id/navigation_timetable"
-        android:icon="@drawable/ic_timetable_black_24dp"
-        android:title="@string/title_timetable" />
+<!--    <item-->
+<!--        android:id="@+id/navigation_timetable"-->
+<!--        android:icon="@drawable/ic_timetable_black_24dp"-->
+<!--        android:title="@string/title_timetable" />-->
 
     <item
         android:id="@+id/navigation_task"
