--- a/app/src/main/res/layout/model_item_task.xml
+++ b/app/src/main/res/layout/model_item_task.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="handler"
+            type="com.github.monolabhituszi.portal.ui.task.TaskEventHandler" />
+
+        <variable
             name="title"
             type="String" />
 
@@ -25,6 +29,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:foreground="?android:attr/selectableItemBackground"
+        android:onClick="@{() -> handler.onItemClick()}"
         app:cardElevation="8dp">
 
         <LinearLayout
