--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,13 @@
 <resources>
     <!-- Theme Preference -->
     <string-array name="theme_entries">
+        <item>Default</item>
         <item>Light</item>
         <item>Dark</item>
     </string-array>
 
     <string-array name="theme_values">
+        <item>default</item>
         <item>light</item>
         <item>dark</item>
     </string-array>
