--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -3,7 +3,7 @@
     <PreferenceCategory app:title="Appearance">
 
         <ListPreference
-            app:defaultValue="light"
+            app:defaultValue="default"
             app:entries="@array/theme_entries"
             app:entryValues="@array/theme_values"
             app:key="theme"
