--- a/app/src/main/res/layout/model_item_timetable.xml
+++ b/app/src/main/res/layout/model_item_timetable.xml
@@ -19,12 +19,8 @@
             type="String" />
 
         <variable
-            name="weekday"
-            type="String" />
-
-        <variable
             name="time"
-            type="Integer" />
+            type="String" />
 
         <variable
             name="location"
@@ -47,54 +43,47 @@
             android:layout_margin="12dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:text="@{title}"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/description"
+                    android:id="@+id/title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:text="@{description}"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/weekday"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:text="@{weekday}"
-                    android:textSize="16sp" />
+                    android:singleLine="true"
+                    android:text="@{title}"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
+                    android:layout_gravity="center"
                     android:text="@{time}"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:layout_marginEnd="4dp"/>
 
                 <TextView
                     android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
+                    android:layout_gravity="center"
                     android:text="@{location}"
                     android:textSize="16sp" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                android:text="@{description}"
+                android:textSize="16sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </layout>
