--- a/app/src/main/res/layout/model_item_notify.xml
+++ b/app/src/main/res/layout/model_item_notify.xml
@@ -5,6 +5,12 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="listener"
+            type="View.OnClickListener" />
+
         <variable
             name="title"
             type="String" />
@@ -25,6 +31,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:foreground="?android:attr/selectableItemBackground"
+        android:onClick="@{listener}"
         app:cardElevation="8dp">
 
         <LinearLayout
