--- a/app/src/main/res/layout/model_item_timetable.xml
+++ b/app/src/main/res/layout/model_item_timetable.xml
@@ -54,6 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:singleLine="true"
+                    android:ellipsize="end"
                     android:text="@{title}"
                     android:textSize="24sp"
                     android:textStyle="bold" />
